[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Doanh Luong"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.2"
black = "^19.10b0"
mypy = "^0.782"
rope = "^0.17.0"
httpx = "^0.13.3"
flake8 = "^3.8.3"
aiofiles = "^0.5.0"
attrs = "^19.3.0"
ansible = "^2.9.10"
pyyaml = "^5.3.1"
paramiko = "^2.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
